feat: observação sobre argumentos JVM para Mockito